feat: implement real-time message reactions in backend